--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "gendiffau",
-  "version": "0.1.1",
+  "version": "0.2.3",
+  "main": "dist/index.js",
   "description": "Compares two configuration files and shows a difference",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "cross-env NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build"
   },
@@ -27,7 +28,8 @@
   },
   "homepage": "https://github.com/augrinn/project-lvl2-s443#readme",
   "dependencies": {
-    "commander": "^2.19.0"
+    "commander": "^2.19.0",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -35,10 +37,14 @@
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.4",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.1.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.15.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.16.0"
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.3.0",
+    "jest": "^24.1.0",
+    "jest-cli": "^24.1.0"
   }
 }
