--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gendiffau",
-  "version": "0.2.8",
+  "version": "0.3.0",
   "main": "dist/index.js",
   "description": "Compares two configuration files and shows a difference",
   "scripts": {
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/augrinn/project-lvl2-s443#readme",
   "dependencies": {
     "commander": "^2.19.0",
+    "js-yaml": "^3.12.2",
     "lodash": "^4.17.11"
   },
   "devDependencies": {
